# shalotts

./: .gitignore  .lldbinit  AGENTS.md  Cargo.toml  Makefile  README.md
.github/workflows/: ci.yml
.zed/: debug.json  tasks.json
crates/geno-cli/: Cargo.toml
crates/geno-template/: Cargo.toml
crates/sha-api/tests/: dev.rs
crates/sha-cli/: Cargo.toml  LICENSE  README.md
crates/sha-cli/src/: main.rs
crates/sha-scaffolder/: Cargo.toml
crates/sha-scaffolder/src/: api.rs  generate.rs  lib.rs
crates/sha-seed/: Cargo.toml
crates/sha-seed/src/: lib.rs
crates/sha-utils/: Cargo.toml
crates/sha-utils/src/: consts.rs  lib.rs  oxc.rs  tera.rs  workspace.rs
crates/sha-validator/: Cargo.toml
crates/sha-validator/src/: consts.rs  lib.rs  main_config.rs
crates/sha-web/: AGENTS.md  Cargo.toml  Dioxus.toml
crates/sha-web/assets/: main.css  tailwind.css
crates/sha-web/src/: main.rs  views.rs
crates/sha-web/src/components/: test.rs
crates/sha-web/src/layouts/: navbar.rs
crates/sha-web/src/views/: home.rs
docs/: astro.config.mjs  design_document.md  genoplate_performance_optimization.md  init.md  uniqueness_research.md
docs/src/content/docs/: index.mdx
examples/elysia/: sha.json  sha.toml
frontend/: components.json  env.ts  nuxt.config.ts  package.json  tailwind.config.ts
frontend/app/: app.vue  globals.css  styles.pcss
frontend/app/components/config/: AppConfigHeader.vue  AppConfigItem.vue
frontend/app/components/copy/: AppCopy.vue
frontend/app/components/market/: AppMarketButton.vue  AppMarketDialog.vue  AppMarketItem.vue  (+1 more)
frontend/app/composables/: api.ts  encoder.ts
frontend/app/layouts/: about.vue  default.vue
frontend/app/lib/: seed.ts  utils.ts
frontend/app/middleware/: ecosystem.ts
frontend/app/pages/: index.vue
frontend/app/plugins/: api-toast.client.ts
frontend/app/stores/: config.ts  market.ts
frontend/app/types/: config.types.ts
frontend/server/: data.ts
frontend/server/api/: [...].ts  config-data.ts  store.ts
(+13 files in other folders)
