[workspace]
members = ["crates/sha-validator", "crates/sha-web", "crates/sha-cli", "crates/sha-utils", "crates/sha-scaffolder"]
default-members = ["crates/sha-cli"]
resolver = "2"

[workspace.dependencies]
flexi_logger = "0.28"
log = "0.4"

[workspace.package]
name = "shalotts"
authors = ["francyfox <7info7web@gmail.com>"]
license = "MIT"
edition = "2024"
exclude = [".github/*", ".vscode/*", "assets/*"]
readme = "README.md"
keywords = ["webui", "cli", "ui", "boilerplate"]
