[package]
name = "sha_cli"
version = "0.1.0"
edition = "2024"
description = "An example generated using the hello-world template"

[dependencies]
flexi_logger.workspace = true
color-eyre = "0.6.3"
crossterm = "0.29.0"
ratatui = "0.30.0"
sha_validator = { path = "../sha-validator" }
sha_utils = { path = "../sha-utils" }

# Read the optimization guideline
[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
strip = true
